<resources>
    <string name="app_name" translatable="false">Smart Attendance Manager</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password (optional)</string>
    <string name="action_sign_in_short" translatable="true">Sign in</string>
    <string name="error_invalid_email" translatable="true">This email address is invalid</string>
    <string name="error_invalid_password" translatable="true">This password is too short</string>
    <string name="error_incorrect_password" translatable="true">This password is incorrect</string>
    <string name="error_field_required" translatable="true">This field is required</string>

    <string name="action_sign_up" translatable="true">Sign up</string>
    <string name="title_activity_sign_up" translatable="true">Sign in</string>
    <string name="action_sign_in" translatable="true">Sign in or register</string>
    <string name="prompt_name" translatable="true">Full Name</string>
    <string name="title_activity_main" translatable="true">MainActivity</string>
    <string name="edit_text_hint" translatable="true">Enter Subject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="classAttended">Classes Attended</string>
    <string name="numberOfClasses">Total Classes Conducted</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="enable_geofencing" translatable="false">geofencing</string>
    <string name="summary_geofencing" translatable="true">Mark attendance when found near college</string>
    <string name="title_geofencing" translatable="true">Enable Location Marking</string>
    <string name="pref_title_notifications" translatable="true">Notifications</string>
    <string name="pref_header_alarms" translatable="true">Alarm</string>
    <string name="alarm_attendance_low" translatable="false">alarm_attendance_low</string>
    <string name="title_alarm" translatable="true">Enable Alarm feature</string>
    <string name="college_address" translatable="false">college_address</string>
    <string name="summary_college" translatable="true">Select Your College</string>
    <string name="title_college" translatable="true">College Location</string>
    <string name="title_activity_settings2" translatable="true">Settings</string>
    <string name="geofence_disabled" translatable="true">Geofencing Disabled</string>
    <string name="geofence_enabled" translatable="true">Geofencing Enabled</string>
    <string name="attendance_required" translatable="true">Attendance Criteria</string>
    <string name="college_time" translatable="false">college_time</string>
    <string name="summary_time" translatable="true">No Time Set</string>
    <string name="time_college" translatable="true">Select Time</string>
    <string name="alarm_auto_enable" translatable="false">alarm_auto_enable</string>
    <string name="auto_enable_alarm" translatable="true">Auto Enable</string>
    <string name="enable_attendance_based" translatable="true">Enable Alarm based on Attendance</string>
    <string name="logo_transition" translatable="false">simple_activity_transition</string>
    <string name="email_hint" translatable="true">Email</string>
    <string name="password_hint" translatable="true">Password</string>
    <string name="login_button_text" translatable="true">Login</string>
    <string name="sign_up_text" translatable="true">No account yet? Create one</string>
    <string name="forgot_password" translatable="true">Forgot Password?</string>
    <string name="full_name" translatable="true">Full Name</string>
    <string name="sign_up" translatable="true">Sign Up</string>
    <string name="login_account" translatable="true">Have an Account? Log In</string>
    <string name="check_internet" translatable="true">Check your Internet Connection</string>
    <string name="password_reset_mail_sent" translatable="true">Mail has been sent with reset link to the above Email Address</string>
    <string name="auth_failed" translatable="true">Authentication failed, Password or email is incorrect</string>
    <string name="account_creation_error" translatable="true">Can\'t Create Account, please try again!</string>
    <string name="leave_class" translatable="true">You may leave next %d classes</string>
    <string name="attend_class_on_track" translatable="true">Attend next %d classes to get on track</string>
    <string name="attendance_shared_pref" translatable="false">attendance</string>
    <string name="logout" translatable="true">Log out</string>
    <string name="time_table" translatable="true">Time Table</string>
    <string name="all_subjects" translatable="true">All Subjects</string>
    <string name="stop_alarm" translatable="true">Stop Alarm</string>
    <string name="attendance_today_marked" translatable="false">today_attendance</string>
    <string name="add_widget" translatable="true">Add widget</string>
    <string name="add_subjects" translatable="true">Add Subjects</string>
    <string name="location_access_required" translatable="true">Location access is required for it to work</string>
    <string name="mark_attendance" translatable="true">Mark Attendance</string>
    <string name="add_least_subject">Add at least one Subject</string>
    <string name="no_subjects_to_show">No classes today. Sit back, Relax!</string>
    <string name="reset_subjects">reset_subjects</string>
    <string name="reset_subjects_summary" translatable="true">Clear and Re-enter subjects</string>
    <string name="reset" translatable="true">Reset</string>
    <string name="reset_all_data" translatable="true">Do you really want to reset all data?</string>
    <string name="logout_message" translatable="true">Are you sure you want to logout?</string>
    <string name="app_logo_description" translatable="true">App Logo</string>
    <string name="login_field" translatable="true">Login Field</string>
    <string name="login_password_field" translatable="true">Login Password Field</string>
    <string name="login_button_description" translatable="true">Login Button</string>
    <string name="create_account_description" translatable="true">Create account</string>
    <string name="forgot_password_description" translatable="true">forgot password</string>
    <string name="enter_your_name_here" translatable="true">Enter Your name here</string>
    <string name="sign_up_button_description" translatable="true">Sign Up button</string>
    <string name="sign_in_description" translatable="true">Sign In</string>
    <string name="place_not_found" translatable="true">Place not found</string>
    <string name="enter_subject" translatable="true">Enter Subject</string>
    <string name="proceed" translatable="true">Proceed</string>
    <string name="user" translatable="true">User</string>
    <string name="add_your_subjects_here_press_add_button_to_add_more" translatable="true">Add all your Subjects here</string>
    <string name="please_log_in_and_add_subjects" translatable="true">Please Log In and Add Subjects</string>
    <string name="day_of_week">Day of Week</string>
    <string name="no_subjects_to_show_image">No Subjects to Show</string>
    <string name="attend_class">Attend Class</string>
    <string name="leave_class_description">Leave Class</string>
    <string name="subject_added_to_time_table">Subject Added to time table</string>
    <string name="set_attendance_criteria">Set Attendance Criteria</string>
    <string name="login_failed_message">Login failed! Please try again later</string>
    <string name="change_time_table">Change Time Table</string>
    <string name="is_details">isDetails</string>
    <string name="first_visit">firstPref</string>
    <string name="reset_all">Reset All</string>
    <string name="add_a_subject">Add a subject</string>
    <string name="subject_name">Enter Subject Name</string>
    <string name="added_day">Added to %s time table</string>
    <string name="tap_to_added_day">Tap to add subject to %s time table</string>
    <string name="classes_greater">Class Attended cannot be greater than classes conducted</string>
    <string name="class_empty">Cannot be empty</string>
    <string name="class_greater_limit">Cannot be greater than %d</string>
    <string name="add_to_time_table">Add subject to time table</string>
    <string name="check_other_options">Tap to manage subject details</string>
    <string name="no_sub_added">No subjects Added</string>
    <string name="promt_add_subject">Would you like to add subjects?</string>
    <string name="first_visit_attendance">first_visit_attendance</string>
    <string name="delete">Delete</string>
    <string name="undo">UNDO</string>
    <string name="negative_classes">Classes cannot be negative</string>
</resources>
