<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Location">

        <Preference
            android:key="@string/college_address"
            android:summary="@string/summary_college"
            android:title="@string/title_college" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/enable_geofencing"
            android:summary="@string/summary_geofencing"
            android:title="@string/title_geofencing" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_alarms">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/alarm_attendance_low"
            android:title="@string/title_alarm" />

    </PreferenceCategory>

</PreferenceScreen>