<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/photo_background_protection" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_left"
            android:paddingTop="@dimen/padding_top"
            android:paddingRight="@dimen/padding_right">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/logo_image_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/logo_margin_bottom"
                android:src="@drawable/book_logo_login"
                android:transitionName="simple_activity_transition" />

            <!-- Email Label -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_text_format_black_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_input_margin_top"
                    android:layout_marginBottom="@dimen/text_input_margin_bottom"
                    android:paddingStart="@dimen/text_input_padding"
                    android:paddingLeft="@dimen/text_input_padding">

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:inputType="textEmailAddress"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_email_black_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_input_margin_top"
                    android:layout_marginBottom="@dimen/text_input_margin_bottom"
                    android:paddingStart="@dimen/text_input_padding"
                    android:paddingLeft="@dimen/text_input_padding">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <!-- Password Label -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_lock_outline_black_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_input_margin_top"
                    android:layout_marginBottom="@dimen/text_input_margin_bottom"
                    android:paddingStart="@dimen/text_input_padding"
                    android:paddingLeft="@dimen/text_input_padding">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/email_sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_layout_margin"
                android:layout_marginBottom="@dimen/button_layout_margin"
                android:background="@drawable/round_button"
                android:padding="@dimen/button_padding"
                android:text="@string/sign_up"
                android:textColor="@color/button_text_color" />

            <TextView
                android:id="@+id/link_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_view_margin_bottom"
                android:gravity="center"
                android:text="@string/login_account"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>